# cohere-developer-experience

./: .gitignore  CODEOWNERS  Makefile  README.md  ai_examples_override.yml  build.gradle  cohere-openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.github/scripts/: build_cookbooks.py  check-mdx-frontmatter.cjs  check-mdx-frontmatter.js  check_python_code_snippets.py  registry.yaml
.github/workflows/: build-cookbooks.yml  check-broken-links.yml  check-mdx-frontmatter.yml  check-python-code-snippets.yml  create-sdk-releases.yml  create-sdks-release-tags.yml  delete-n-releases.yml  preview-docs.yml  publish-docs.yml  push-to-private-repo.yaml  release-sdks.yaml  release-sdks.yml  snippet-ci.yml  sync-private-repo.yml
compass/: compass-openapi.yaml
fern/: docs.yml  fern.config.json  generators.yml  v1.yml  v2.yml
fern/assets/: input.css  styles.css
fern/compass/: compass-openapi.yaml  compass.yml  generator.yaml
fern/components/: cookbook-header.tsx  cookbooks.tsx  model-showcase.tsx  secondary-title-container.tsx  simple-card.tsx
fern/north/: north.yml
fern/openapi/: chat.yaml  check-api-key.yaml  classify.yaml  cluster-jobs-job-id.yaml  cluster-jobs.yaml  cohere.yaml  connector-logs.yaml  connectors-id-oauth-authorize.yaml  connectors-id.yaml  connectors.yaml  dataset-id.yaml  dataset-usage.yaml  dataset.yaml  detect-language.yaml  detokenize.yaml  embed-jobs-cancel.yaml  embed-jobs-fetch.yaml  embed-jobs-id.yaml  embed-jobs.yaml  embed.yaml  finetuning-finetuned-models-events.yaml  finetuning-finetuned-models-id.yaml  finetuning-finetuned-models-metrics.yaml  finetuning-finetuned-models-training-step-metrics.yaml  finetuning-finetuned-models.yaml  generate.yaml  loglikelihood.yaml  models-get.yaml  models-list.yaml  models-name.yaml  models.yaml  rerank.yaml  summarize.yaml  tokenize.yaml
fern/pages/: cookbooks.mdx  index.mdx
fern/snippets/: basic-text-gen-go-private-v1.mdx  basic-text-gen-python-cohere-v2.mdx  basic-text-gen-python-private-v1.mdx  basic-text-gen-typescript-azure-v2.mdx  sdk-install-go.mdx  sdk-install-java.mdx  sdk-install-python.mdx  sdk-install-typescript.mdx
notebooks/: Cohere_Agent_Ebook_Mortgage_Preapproval_Agent.ipynb  Cohere_Elastic_Guide.ipynb  Cohere_Redis_Guide.ipynb  Embed_Jobs_Semantic_Search.ipynb  Embed_Jobs_Serverless_Pinecone_Semantic_Search.ipynb  Mortgage_Preapproval_Agent.ipynb  README.md  Vanilla_RAG.ipynb  Vanilla_RAG_v2.ipynb
notebooks/agents/: Data_Analyst_Agent_Cohere_and_Langchain.ipynb  Mortgage_Preapproval_Agent_Ebook.ipynb  Multi_Step_Tool_Use.ipynb  Multi_Step_Tool_Use_Spotify_v2.ipynb  Tool_Use.ipynb  Vanilla_Multi_Step_Tool_Use.ipynb  Vanilla_Tool_Use.ipynb  Vanilla_Tool_Use_v2.ipynb  (+1 more)
scripts/: cookbooks.csv  download-cookbooks.mjs  generate_cookbooks_data.py
snippets/: settings.gradle
snippets/curl/: chat-post.sh  (+18 more)
(+1648 files in other folders)
