[project]
name = "cohere-developer-experience"

[tool.poetry]
name = "cohere-developer-experience"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cohere = "^5.11.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.snippet_tester.dependencies]
langchain = "^0.3.20"
langchain-cohere = "^0.4.2"
langchain-core = "^0.3.41"
transformers = "^4.50.3"
langchain-experimental = "^0.3.4"
unstructured = "^0.17.2"
pandas = "^2.2.3"
sagemaker = "^2.243.0"
cohere = "^5.14.0"
scikit-learn = "^1.6.1"
haystack = "^0.42"
chromadb = "^0.6.3"
datasets = "^3.5.0"
pdfminer = "^20191125"
networkx = "^3.4.2"
pypdf2 = "^3.0.1"
umap = "^0.1.1"
ipython = "^9.0.2"
altair = "^5.5.0"
bertopic = "^0.17.0"
llama-index = "^0.12.28"
elasticsearch-serverless = "^0.8.0.20231031"
cohere-sagemaker = "^0.8.1"
